Update crossover to try using order of second parent